src-tauri/log7.txt
    Checking launcherg v0.0.0 (E:\Launcherg-Mod\src-tauri)
warning: unused import: `std::time::Duration`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:8:5
  |
8 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Interface`
 --> src\infrastructure\windowsimpl\scaling\processor.rs:9:35
  |
9 | use windows::core::{ComInterface, Interface};
  |                                   ^^^^^^^^^

warning: unused import: `D3D11_USAGE_DEFAULT`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:20:27
   |
20 |     D3D11_TEXTURE2D_DESC, D3D11_USAGE_DEFAULT, D3D11_USAGE_DYNAMIC,
   |                           ^^^^^^^^^^^^^^^^^^^

warning: unused import: `DXGI_FORMAT_R8G8B8A8_UNORM`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:23:64
   |
23 |     DXGI_ALPHA_MODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM, DXGI_FORMAT_R8G8B8A8_UNORM,
   |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `IDXGISwapChain`
  --> src\infrastructure\windowsimpl\scaling\processor.rs:27:33
   |
27 |     IDXGIDevice, IDXGIFactory2, IDXGISwapChain, IDXGISwapChain1, DXGI_SCALING_NONE,
   |                                 ^^^^^^^^^^^^^^

warning: unused import: `s`
 --> src\infrastructure\windowsimpl\scaling\shader.rs:5:12
  |
5 |     core::{s, PCSTR},
  |            ^

warning: unused import: `crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:1:5
  |
1 | use crate::infrastructure::windowsimpl::scaling::shader::MagpieConstants;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `regex::Regex`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:3:5
  |
3 | use regex::Regex;
  |     ^^^^^^^^^^^^

warning: unused imports: `HashMap` and `HashSet`
 --> src\infrastructure\windowsimpl\scaling\shader_compiler.rs:4:24
  |
4 | use std::collections::{HashMap, HashSet};
  |                        ^^^^^^^  ^^^^^^^

error[E0124]: field `all_game_cache_use_case` is already declared
  --> src\interface\module.rs:27:5
   |
26 |     all_game_cache_use_case: AllGameCacheUseCase<Repositories>,
   |     ---------------------------------------------------------- `all_game_cache_use_case` first declared here
27 |     all_game_cache_use_case: AllGameCacheUseCase<Repositories>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ field already declared

warning: unused variable: `bb_desc`
   --> src\infrastructure\windowsimpl\scaling\processor.rs:362:57
    |
362 | ...                   let mut bb_desc = D3D11_TEXTURE2D_DESC::default();
    |                               ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_bb_desc`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: unnecessary `unsafe` block
   --> src\infrastructure\windowsimpl\scaling\processor.rs:468:13
    |
468 |             unsafe {
    |             ^^^^^^ unnecessary `unsafe` block
    |
    = note: `#[warn(unused_unsafe)]` on by default

warning: variable does not need to be mutable
   --> src\infrastructure\windowsimpl\scaling\processor.rs:290:17
    |
290 |             let mut source_result = CaptureFrameSource::new(target_hwnd, device_for_thread.clone());
    |                 ----^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: variable does not need to be mutable
   --> src\infrastructure\windowsimpl\scaling\processor.rs:362:53
    |
362 | ...                   let mut bb_desc = D3D11_TEXTURE2D_DESC::default();
    |                           ----^^^^^^^
    |                           |
    |                           help: remove this `mut`

For more information about this error, try `rustc --explain E0124`.
warning: `launcherg` (bin "launcherg") generated 13 warnings
error: could not compile `launcherg` (bin "launcherg") due to 1 previous error; 13 warnings emitted
